[gd_scene load_steps=7 format=4 uid="uid://b1k8nkraehsdk"]

[ext_resource type="LabelSettings" uid="uid://b4esuhrdi6585" path="res://resources/header_01.tres" id="1_h0qrn"]
[ext_resource type="Script" uid="uid://b1vq6n2eai73y" path="res://main_scenes/scripts/menu.gd" id="1_mynge"]
[ext_resource type="TileSet" uid="uid://dv2v027pt8d44" path="res://resources/tilemap.tres" id="2_4nrl5"]
[ext_resource type="LabelSettings" uid="uid://b53icysq3n5ka" path="res://resources/header_02.tres" id="2_mynge"]
[ext_resource type="Script" uid="uid://dwtgjnff0r5si" path="res://ui/scripts/volume_container.gd" id="3_fp2u5"]
[ext_resource type="PackedScene" uid="uid://dffco7x5lxwgg" path="res://ui/menu_scene_button.tscn" id="3_h0qrn"]

[node name="Options" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mynge")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAATAAoAAQADAAEAAAATAAkAAQADAAEAAAATAAgAAQADAAEAAAATAAcAAQADAAEAAAATAAYAAQADAAEAAAATAAUAAQADAAEAAAATAAQAAQADAAEAAAATAAMAAQADAAEAAAATAAIAAQADAAEAAAATAAEAAQADAAEAAAATAAAAAQAHAAAAAAASAAoAAQAHAAoAAAASAAkAAQADAAgAAAASAAgAAQADAAgAAAASAAcAAQAHAAsAAAASAAYAAQADAAgAAAASAAUAAQADAAgAAAASAAQAAQAHAAsAAAASAAMAAQADAAgAAAASAAIAAQADAAgAAAASAAEAAQAHAAcAAAASAAAAAQABAAMAAAARAAoAAQABAAoAAAARAAkAAQACAAIAAAARAAgAAQACAAAAAAARAAcAAQABAAoAAAARAAYAAQACAAIAAAARAAUAAQACAAAAAAARAAQAAQABAAoAAAARAAMAAQACAAIAAAARAAIAAQACAAAAAAARAAEAAQABAAoAAAARAAAAAQABAAMAAAAQAAoAAQABAAoAAAAQAAkAAQABAAIAAAAQAAgAAQABAAAAAAAQAAcAAQABAAoAAAAQAAYAAQABAAIAAAAQAAUAAQABAAAAAAAQAAQAAQABAAoAAAAQAAMAAQABAAIAAAAQAAIAAQABAAAAAAAQAAEAAQABAAoAAAAQAAAAAQABAAMAAAAPAAoAAQABAAoAAAAPAAkAAQAAAAIAAAAPAAgAAQAAAAAAAAAPAAcAAQABAAoAAAAPAAYAAQAAAAIAAAAPAAUAAQAAAAAAAAAPAAQAAQABAAoAAAAPAAMAAQAAAAIAAAAPAAIAAQAAAAAAAAAPAAEAAQABAAoAAAAPAAAAAQABAAMAAAAOAAoAAQAEAAoAAAAOAAkAAQADAAgAAAAOAAgAAQADAAgAAAAOAAcAAQAEAAsAAAAOAAYAAQADAAgAAAAOAAUAAQADAAgAAAAOAAQAAQAEAAsAAAAOAAMAAQADAAgAAAAOAAIAAQADAAgAAAAOAAEAAQAEAAcAAAAOAAAAAQABAAMAAAANAAoAAQADAAEAAAANAAkAAQADAAEAAAANAAgAAQADAAEAAAANAAcAAQADAAEAAAANAAYAAQADAAEAAAANAAUAAQADAAEAAAANAAQAAQADAAEAAAANAAMAAQADAAEAAAANAAIAAQADAAEAAAANAAEAAQADAAEAAAANAAAAAQAIAAAAAAAMAAoAAQACAAkAAAAMAAkAAQACAAgAAAAMAAgAAQACAAgAAAAMAAcAAQACAAgAAAAMAAYAAQACAAgAAAAMAAUAAQACAAgAAAAMAAQAAQACAAgAAAAMAAMAAQACAAgAAAAMAAIAAQACAAgAAAAMAAEAAQACAAcAAAAMAAAAAQABAAMAAAALAAoAAQABAAkAAAALAAkAAQABAAgAAAALAAgAAQABAAgAAAALAAcAAQABAAgAAAALAAYAAQABAAgAAAALAAUAAQABAAgAAAALAAQAAQABAAgAAAALAAMAAQABAAgAAAALAAIAAQABAAgAAAALAAEAAQABAAcAAAALAAAAAQABAAMAAAAKAAoAAQABAAkAAAAKAAkAAQABAAgAAAAKAAgAAQABAAgAAAAKAAcAAQABAAgAAAAKAAYAAQABAAgAAAAKAAUAAQABAAgAAAAKAAQAAQABAAgAAAAKAAMAAQABAAgAAAAKAAIAAQABAAgAAAAKAAEAAQABAAcAAAAKAAAAAQABAAMAAAAJAAoAAQABAAkAAAAJAAkAAQABAAgAAAAJAAgAAQABAAgAAAAJAAcAAQABAAgAAAAJAAYAAQABAAgAAAAJAAUAAQABAAgAAAAJAAQAAQABAAgAAAAJAAMAAQABAAgAAAAJAAIAAQABAAgAAAAJAAEAAQABAAcAAAAJAAAAAQABAAMAAAAIAAoAAQABAAkAAAAIAAkAAQABAAgAAAAIAAgAAQABAAgAAAAIAAcAAQABAAgAAAAIAAYAAQABAAgAAAAIAAUAAQABAAgAAAAIAAQAAQABAAgAAAAIAAMAAQABAAgAAAAIAAIAAQABAAgAAAAIAAEAAQABAAcAAAAIAAAAAQABAAMAAAAHAAoAAQAAAAkAAAAHAAkAAQAAAAgAAAAHAAgAAQAAAAgAAAAHAAcAAQAAAAgAAAAHAAYAAQAAAAgAAAAHAAUAAQAAAAgAAAAHAAQAAQAAAAgAAAAHAAMAAQAAAAgAAAAHAAIAAQAAAAgAAAAHAAEAAQAAAAcAAAAHAAAAAQABAAMAAAAGAAoAAQADAAEAAAAGAAkAAQADAAEAAAAGAAgAAQADAAEAAAAGAAcAAQADAAEAAAAGAAYAAQADAAEAAAAGAAUAAQADAAEAAAAGAAQAAQADAAEAAAAGAAMAAQADAAEAAAAGAAIAAQADAAEAAAAGAAEAAQADAAEAAAAGAAAAAQAIAAAAAAAFAAoAAQAHAAoAAAAFAAkAAQADAAgAAAAFAAgAAQADAAgAAAAFAAcAAQAHAAsAAAAFAAYAAQADAAgAAAAFAAUAAQADAAgAAAAFAAQAAQAHAAsAAAAFAAMAAQADAAgAAAAFAAIAAQADAAgAAAAFAAEAAQAHAAcAAAAFAAAAAQABAAMAAAAEAAoAAQABAAoAAAAEAAkAAQACAAIAAAAEAAgAAQACAAAAAAAEAAcAAQABAAoAAAAEAAYAAQACAAIAAAAEAAUAAQACAAAAAAAEAAQAAQABAAoAAAAEAAMAAQACAAIAAAAEAAIAAQACAAAAAAAEAAEAAQABAAoAAAAEAAAAAQABAAMAAAADAAoAAQABAAoAAAADAAkAAQABAAIAAAADAAgAAQABAAAAAAADAAcAAQABAAoAAAADAAYAAQABAAIAAAADAAUAAQABAAAAAAADAAQAAQABAAoAAAADAAMAAQABAAIAAAADAAIAAQABAAAAAAADAAEAAQABAAoAAAADAAAAAQABAAMAAAACAAoAAQABAAoAAAACAAkAAQAAAAIAAAACAAgAAQAAAAAAAAACAAcAAQABAAoAAAACAAYAAQAAAAIAAAACAAUAAQAAAAAAAAACAAQAAQABAAoAAAACAAMAAQAAAAIAAAACAAIAAQAAAAAAAAACAAEAAQABAAoAAAACAAAAAQABAAMAAAABAAoAAQAEAAoAAAABAAkAAQADAAgAAAABAAgAAQADAAgAAAABAAcAAQAEAAsAAAABAAYAAQADAAgAAAABAAUAAQADAAgAAAABAAQAAQAEAAsAAAABAAMAAQADAAgAAAABAAIAAQADAAgAAAABAAEAAQAEAAcAAAABAAAAAQABAAMAAAAAAAoAAQADAAEAAAAAAAkAAQADAAEAAAAAAAgAAQADAAEAAAAAAAcAAQADAAEAAAAAAAYAAQADAAEAAAAAAAUAAQADAAEAAAAAAAQAAQADAAEAAAAAAAMAAQADAAEAAAAAAAIAAQADAAEAAAAAAAEAAQADAAEAAAAAAAAAAQAEAAAAAAARAAsAAQABAAMAAAAQAAsAAQABAAMAAAAPAAsAAQABAAMAAAAOAAsAAQABAAMAAAANAAsAAQAIAAMAAAAMAAsAAQABAAMAAAALAAsAAQABAAMAAAAKAAsAAQABAAMAAAAJAAsAAQABAAMAAAAIAAsAAQABAAMAAAAHAAsAAQABAAMAAAAGAAsAAQAIAAMAAAAFAAsAAQABAAMAAAAEAAsAAQABAAMAAAATAAsAAQAHAAMAAAASAAsAAQABAAMAAAADAAsAAQABAAMAAAACAAsAAQABAAMAAAABAAsAAQABAAMAAAAAAAsAAQAEAAMAAAA=")
tile_set = ExtResource("2_4nrl5")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "OPTIONS"
label_settings = ExtResource("1_h0qrn")

[node name="PanelContainer2" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VolumeContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
script = ExtResource("3_fp2u5")

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer"]
layout_mode = 2
text = "Master"
label_settings = ExtResource("2_mynge")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterSlider" type="HSlider" parent="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.2
value = 0.8

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer"]
layout_mode = 2
text = "Music"
label_settings = ExtResource("2_mynge")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.2
value = 0.8

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer"]
layout_mode = 2
text = "Sfx"
label_settings = ExtResource("2_mynge")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SfxSlider" type="HSlider" parent="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.2
value = 0.8

[node name="MenuSceneButton" parent="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer" instance=ExtResource("3_h0qrn")]
layout_mode = 2
text = "Main Menu"
next_scene = 1

[connection signal="value_changed" from="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer/MasterSlider" to="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer" method="_on_slider_value_changed" binds= ["Master"]]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer/MusicSlider" to="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer" method="_on_slider_value_changed" binds= ["Music"]]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer/SfxSlider" to="CenterContainer/VBoxContainer/PanelContainer2/VolumeContainer" method="_on_slider_value_changed" binds= ["Sfx"]]
